--- a/src/app/public/pages/about-me/about-me.component.html
+++ b/src/app/public/pages/about-me/about-me.component.html
@@ -147,94 +147,97 @@
       </p>
     </div>
   </div>
-  <div class="col-xl-6 col-md-6 col-ms-6">
-    <div class="container-info-img">
-      <img src="assets/img/jonathan07.jpeg" alt="" />
-    </div>
-    <div class="container-info-img-text">
-      <span class="skill-title">Mis Habilidades</span>
-      <div class="containe-info-skills">
-        <span class="hability">Html</span>
-        <span class="hability">Css</span>
-        <span class="hability">JavaScript</span>
-        <span class="hability">Java</span>
-        <span class="hability">Django</span>
-        <span class="hability">Python</span>
-        <span class="hability">Angular</span>
-        <span class="hability">Figma</span>
-        <span class="hability">SQL</span>
-        <span class="hability">PostgresSQL</span>
-        <span class="hability">MySQL</span>
-        <span class="hability">React</span>
-        <span class="hability">TypeScript</span>
+  <div class="col-xl-6 col-md-12 col-ms-12">
+    <div class="container-info-text">
+      <div class="container-info-img">
+        <img src="assets/img/jonathan07.jpeg" alt="" />
       </div>
-    </div>
-    <div class="container-info-img-conpetencias">
-      <span class="skill-title">Competencias Especificas</span>
-      <div class="containe-info-skills">
-        <ul class="skills-text">
-          <li>
-            <a>Crear y conceptualizar</a>
-            <span class="porcentaje">95%</span>
-          </li>
-          <li>
-            <a>Adaptarse y afrontar</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Interactuar y presentar</a>
-            <span class="porcentaje">90%</span>
-          </li>
-          <li>
-            <a>Liderar y decidir</a>
-            <span class="porcentaje">97%</span>
-          </li>
-          <li>
-            <a>Apoyar y cooperar</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Analizar y interpretar</a>
-            <span class="porcentaje">90%</span>
-          </li>
-          <li>
-            <a>Emprender y actuar</a>
-            <span class="porcentaje">97%</span>
-          </li>
-          <li>
-            <a>Organizar y ejecutar</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Iniciativa</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Independencia</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Comunicación</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Honestidad</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Trabajo en equipo</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Responsabilidad</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          <li>
-            <a>Toma de decisiones</a>
-            <span class="porcentaje">100%</span>
-          </li>
-          
-        </ul>
+      <div class="container-info-img-text">
+        <span class="skill-title">Mis Habilidades</span>
+        <div class="containe-info-skills">
+          <span class="hability">Html</span>
+          <span class="hability">Css</span>
+          <span class="hability">JavaScript</span>
+          <span class="hability">Java</span>
+          <span class="hability">Django</span>
+          <span class="hability">Python</span>
+          <span class="hability">Angular</span>
+          <span class="hability">Figma</span>
+          <span class="hability">SQL</span>
+          <span class="hability">PostgresSQL</span>
+          <span class="hability">MySQL</span>
+          <span class="hability">React</span>
+          <span class="hability">TypeScript</span>
+        </div>
+      </div>
+
+      <div class="container-info-img-conpetencias">
+        <span class="skill-title">Competencias Especificas</span>
+        <div class="containe-info-skills">
+          <ul class="skills-text">
+            <li>
+              <a>Crear y conceptualizar</a>
+              <span class="porcentaje">95%</span>
+            </li>
+            <li>
+              <a>Adaptarse y afrontar</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Interactuar y presentar</a>
+              <span class="porcentaje">90%</span>
+            </li>
+            <li>
+              <a>Liderar y decidir</a>
+              <span class="porcentaje">97%</span>
+            </li>
+            <li>
+              <a>Apoyar y cooperar</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Analizar y interpretar</a>
+              <span class="porcentaje">90%</span>
+            </li>
+            <li>
+              <a>Emprender y actuar</a>
+              <span class="porcentaje">97%</span>
+            </li>
+            <li>
+              <a>Organizar y ejecutar</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Iniciativa</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Independencia</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Comunicación</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Honestidad</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Trabajo en equipo</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Responsabilidad</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            <li>
+              <a>Toma de decisiones</a>
+              <span class="porcentaje">100%</span>
+            </li>
+            
+          </ul>
+        </div>
       </div>
     </div>
   </div>
@@ -293,5 +296,5 @@
     </div>
   </div>
 </div>
-
-<app-footer></app-footer>
+<!-- 
+<app-footer></app-footer> -->
