--- a/src/app/public/components/experiences/experiences.component.html
+++ b/src/app/public/components/experiences/experiences.component.html
@@ -7,7 +7,7 @@
             <h3 class="title-section" style="font-size: 42px">
               MIS EXPERIENCIA
             </h3>
-            <p style="margin: 22px  5% ;">
+            <p style="margin: 22px 5%">
               Llevo varios años dedicándome a la programación, y a lo largo de
               este tiempo, he aprendido mucho y he crecido como profesional.
               Durante mis estudios en la universidad, tuve la oportunidad de
@@ -20,12 +20,10 @@
             </p>
           </div>
           <div class="col-xl-12">
-            <ul class="timeline ">
+            <ul class="timeline">
               <li>
                 <div class="text-center">
-                  <h5 class="text-uppercase  fs-16">
-                    15/03/2022 – 15/08/2022
-                  </h5>
+                  <h5 class="text-uppercase fs-16">15/03/2022 – 15/08/2022</h5>
                 </div>
                 <div class="card">
                   <div class="card-body">
@@ -53,9 +51,7 @@
 
               <li>
                 <div class="text-center">
-                  <h5 class="text-uppercase  fs-16">
-                    25/04/2022 – 25/07/2022
-                  </h5>
+                  <h5 class="text-uppercase fs-16">25/04/2022 – 25/07/2022</h5>
                 </div>
                 <div class="card">
                   <div class="card-body">
@@ -107,11 +103,12 @@
                           módulos de Usuario Empresa y Usuario Postulante
                         </h3>
                         <p class="mb-0 mt-2 pt-1 text-muted">
-                          Vivamus ultrices massa turna interdum eu. Pellentesque
-                          habitant morbi tristique eget justo sit amet est
-                          varius mollis et quis nisi. Suspendisse potenti.
-                          senectus et netus et malesuada fames ac turpis
-                          egestas.
+                          Desarrollo de una plataforma de bolsa de trabajo
+                          accesibles para personas con discapacidad y
+                          competencias lo que nos involucramos fue en el
+                          desarrollo tanto como frontend y backend en la
+                          arquitectura y sus dos módulos que se realizó,
+                          utilizando las mejores prácticas en Angular y Django
                         </p>
                       </div>
                     </div>
