--- a/src/app/public/pages/about-me/about-me.component.html
+++ b/src/app/public/pages/about-me/about-me.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col-xl-6 col-lg-12 col-md-12">
       <div class="container-text-about">
-        <h3>Quién Soy, conoseme</h3>
+        <h3>Quién Soy, conóceme</h3>
         <P>
           ❝El éxito significa hacer lo mejor que podemos con lo que tenemos. El
           éxito está en el hacer, no en el conseguir; en el intentar, no en el
