--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -22,8 +22,7 @@
 
   </div> -->
   <!-- <div class="row"> -->
-  <div class="container-footer-botton">
-    <!-- <h1 style="color: white">{{weather?.location?.name}}</h1> -->
+  <!-- <div class="container-footer-botton">
 
     <div class="weather">
       <div class="banner">
@@ -125,7 +124,6 @@
             <img src="assets/img/weather/cloud1.png" alt="" style="--i: 1" />
             <img src="assets/img/weather/cloud2.png" alt="" style="--i: 2" />
             <img src="assets/img/weather/cloud3.png" alt="" style="--i: 4" />
-            <!-- <img src="assets/img/weather/cloud2.png" alt="" style="--i: 7" /> -->
           </div>
         </div>
         <div
@@ -140,13 +138,12 @@
           *ngIf="weather?.current?.cloud <= 10 && weather?.current?.cloud >= 0"
         >
           <div class="clouds">
-            <!-- <img src="assets/img/weather/cloud1.png" alt="" style="--i:9"> -->
             <img src="assets/img/weather/cloud1.png" alt="" style="--i: 16" />
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="container-center-text">
     <div class="container-center-texto-2">
       <div class="row">
