--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -395,7 +395,7 @@ margin: 20% 5%;
 
 .container-proyect{
   background-color: rgba($color: #1e5986, $alpha: 1.0);
-  padding: 20px  0 0 0;
+  padding: 19px  0 0 0;
 }
 
 .container-hability{
@@ -452,6 +452,7 @@ margin: 20% 5%;
   overflow: hidden;
   line-height: 0;
   transform: rotate(180deg);
+  bottom: -1px;
 }
 
 .custom-shape-divider-bottom-1719285687 svg {
@@ -475,6 +476,8 @@ margin: 20% 5%;
   overflow: hidden;
   line-height: 0;
   transform: rotate(360deg);
+  position: relative;
+  bottom: 1px;
 }
 
 .custom-shape-divider-bottom-17 svg {
@@ -483,6 +486,7 @@ margin: 20% 5%;
   width: calc(100% + 1.3px);
   height: 120px;
   transform: rotateY(180deg);
+
 }
 
 .custom-shape-divider-bottom-17 .shape-fill {
@@ -496,6 +500,8 @@ margin: 20% 5%;
   width: 100%;
   overflow: hidden;
   line-height: 0;
+  position: relative;
+    bottom: -1px;
   // transform: rotate(180deg);
 }
 
