--- a/src/app/shared/spinner/spinner.component.scss
+++ b/src/app/shared/spinner/spinner.component.scss
@@ -1,14 +1,23 @@
+.container-body{
+  // background: #16324F;
+  width: 100%;
+  height: 100%;
+  // height: 100vh;
+  text-align: center;
+}
+
 .loader {
     position: relative;
     width: 164px;
     height: 164px;
+    top: 50%;
   }
   .loader::before , .loader::after {
     content: '';
     position: absolute;
     width: 40px;
     height: 40px;
-    background-color: #fff;
+    background-color: #ee0a0a;
     left: 50%;
     top: 50%;
     animation: rotate 1s ease-in infinite;
