--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -30,26 +30,13 @@ data-aos-easing="ease-in-sine" -->
               placeat, cupiditate ipsa ad eaque ducimus laboriosam quod
               provident ea officia quis, rem laborum!
             </p>
-            <div
-              class="btn-group"
-              role="group"
-              aria-label="Basic outlined example"
-            >
-              <button type="button" class="btn btn-outline-primary">
-                <a
-                  href="http://172.203.202.117/#/"
-                  style="text-decoration: none; color: white"
-                  target="_blank"
-                  ><i class="bi bi-eye-fill"> Ver</i></a
-                >
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-up"></i> Me gusta
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-down"></i> No me gusta
-              </button>
-            </div>
+          <br>
+              <a
+              id="linkVer"
+              href="http://172.203.202.117/#/"
+              target="_blank"
+              ><i class="bi bi-eye-fill"></i> Ver 
+              </a>
           </div>
         </div>
       </div>
@@ -70,26 +57,15 @@ data-aos-easing="ease-in-sine" -->
               placeat, cupiditate ipsa ad eaque ducimus laboriosam quod
               provident ea officia quis, rem laborum!
             </p>
-            <div
-              class="btn-group"
-              role="group"
-              aria-label="Basic outlined example"
-            >
-              <button type="button" class="btn btn-outline-primary">
-                <a
-                  href="https://simulab.edutech-project.org/about-us"
-                  style="text-decoration: none; color: white"
-                  target="_blank"
-                  ><i class="bi bi-eye-fill"> Ver</i></a
-                >
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-up"></i> Me gusta
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-down"></i> No me gusta
-              </button>
-            </div>
+
+            <br>
+              <a
+              id="linkVer"
+              href="https://simulab.edutech-project.org/about-us"
+              target="_blank"
+              ><i class="bi bi-eye-fill"></i> Ver 
+              </a>
+          
           </div>
         </div>
       </div>
@@ -109,21 +85,13 @@ data-aos-easing="ease-in-sine" -->
               placeat, cupiditate ipsa ad eaque ducimus laboriosam quod
               provident ea officia quis, rem laborum!
             </p>
-            <div
-              class="btn-group"
-              role="group"
-              aria-label="Basic outlined example"
-            >
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-eye-fill"></i> Ver
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-up"></i> Me gusta
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-down"></i> No me gusta
-              </button>
-            </div>
+            <br>
+              <a
+              id="linkVer"
+              href="https://simulab.edutech-project.org/about-us"
+              target="_blank"
+              ><i class="bi bi-eye-fill"></i> Ver 
+              </a>
           </div>
         </div>
       </div>
@@ -143,21 +111,13 @@ data-aos-easing="ease-in-sine" -->
               placeat, cupiditate ipsa ad eaque ducimus laboriosam quod
               provident ea officia quis, rem laborum!
             </p>
-            <div
-              class="btn-group"
-              role="group"
-              aria-label="Basic outlined example"
-            >
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-eye-fill"></i> Ver
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-up"></i> Me gusta
-              </button>
-              <button type="button" class="btn btn-outline-primary">
-                <i class="bi bi-hand-thumbs-down"></i> No me gusta
-              </button>
-            </div>
+            <br>
+              <a
+              id="linkVer"
+              href="https://simulab.edutech-project.org/about-us"
+              target="_blank"
+              ><i class="bi bi-eye-fill"></i> Ver 
+              </a>
           </div>
         </div>
       </div>
